[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
tor-example-rs = { git = "https://github.com/TonyGiorgio/tor-example-rs" }
